test/fail/match/match_bad_decompose_attempt.lly
#[
SyntaxError: Expected ':', not (.
    from match_bad_decompose_attempt.lly:14
]#

enum Option[A] {
    Some(A)
    None
}

var v = None

match v: {
    case None(a):
    case Some(s):
}
